uptime-kuma/uptime-kuma-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: uptime
    spec:
      volumes:
        - name: uptime
          persistentVolumeClaim:
            claimName: uptime
      containers:
      - name: uptime
        image: louislam/uptime-kuma
        ports:
          - containerPort: 3001
        volumeMounts:
        - mountPath: "/app/data"
          name: uptime
