uptime-kuma/uptime-kuma-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: uptime
  namespace: uptime
spec:
  ports:
  - name: uptime
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: uptime
type: LoadBalancer
