uptime-kuma/uptime-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.uptime.test.com`)
      kind: Rule
      services:
        - name: uptime
          port: 80
    - match: Host(`uptime.test.com`)
      kind: Rule
      services:
        - name: uptime
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-test-com-tls
